--- a/page-2.html
+++ b/page-2.html
@@ -3,7 +3,7 @@
 
 	<head>
 	
-		<title>Hello world!</title>
+		<title>Concert-Info</title>
 		
 	</head>
     
@@ -18,9 +18,9 @@
 	Paris - Jimi Hendrix<br>
 	</ul>
 	
-	<a href="page-2.html">Home Page</a><br>
+	<a href="page-1.html">Home Page</a><br>
 	<a href="page-3.html">Buy Concert Tickets</a><br>
-	<a href="page-2.html"><img src="concert2.jpg" alt="concert-home" /></a><br>
+	<a href="page-1.html"><img src="concert2.jpg" alt="concert-home" /></a><br>
 	<a href="page-3.html"><img src="concert-tickets.png" alt="concert-tickets" /></a><br>
 	
 	</body>
